--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -10,7 +10,8 @@
       </div>
     </div>
     <div class="col-md-7">
-      <dsod-topic [topic]="latestTopic" [showImage]="false" [showHeader]="true" styleFor="content-lg" [showRating]=true>
+      <dsod-topic [topic]="latestTopic" [contentLength]=493 [showImage]="false" [showHeader]="true" styleFor="content-lg"
+        [showRating]=true>
       </dsod-topic>
     </div>
   </div>
