--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -19,7 +19,7 @@
               Sponsored content from GlaxoSmithKline
             </h4>
           </div>
-          <dsod-topic [topic]="topic" [showImage]="false" styleFor="content-lg" [showHeader]="false"></dsod-topic>
+          <dsod-topic [topic]="topic" [contentLength]=300 [showImage]="false" styleFor="content-lg" [showHeader]="false"></dsod-topic>
         </div>
       </div>
       <div class="col-lg-6 col-md-12">
