--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -1,9 +1,9 @@
 <h2 class="section-title">From Our Sponsors </h2>
 <div class="row">
-  <div class="col-md-12" *ngFor="let topic of sponsoredTopics | slice:0:3">
+  <div class="col-12" *ngFor="let topic of sponsoredTopics | slice:0:3">
 
     <div class="row">
-      <div class="col-lg-6 col-md-12">
+      <div class="col-6">
         <div class="our-sponsors">
           <div class="our-sponsors-header">
             <h4 *ngIf="topic.sponsorName==='ALN'">
@@ -22,7 +22,7 @@
           <dsod-topic [topic]="topic" [contentLength]=300 [showImage]="false" styleFor="content-lg" [showHeader]="false"></dsod-topic>
         </div>
       </div>
-      <div class="col-lg-6 col-md-12">
+      <div class="col-6">
         <section class="sponsors-ortho">
           <div>
             <dsod-media-content title="implant Dentisty" [placeholderImageSrc]="topic.featuredMedia.code.originalUrl"
