--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -4,13 +4,13 @@
   </go-top-button>
   <div class="container">
     <div class="row">
-      <div class="col-xl-3 align-self-center">
+      <div class="col-3 align-self-center">
         <div class="ftr-logo text-lg-center">
           <a [routerLink]="['/']"><img class="img-fluid" src="./assets/images/ftr-logo.png" alt=""></a>
           <p>Your career. Your life. Your way.</p>
         </div>
       </div>
-      <div class="col-xl-6 align-self-center">
+      <div class="col-6 align-self-center">
         <ul class="ftr-nav">
           <li><a [routerLink]="['about']">About</a></li>
           <li><a [routerLink]="['contact']">Contact Us</a></li>
@@ -19,7 +19,7 @@
           <li><a [routerLink]="['adpolicy']">Ad Policy</a></li>
         </ul>
       </div>
-      <div class="col-xl-3 align-self-center">
+      <div class="col-3 align-self-center">
         <ul class=" social-links justify-content-lg-center">
           <li><a href="javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
           <li><a href="javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
