--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -8,19 +8,15 @@
       <div class="brand">
         <a [routerLink]="['/']"><img class="img img-fluid" src="assets/images/dso-logo.png"></a>
       </div>
-      <div class="col-sm-10">
-        <div class="nav-menu">
-          <nav class="navbar navbar-expand-lg navbar-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="col-10 d-flex">
+        <div class="nav-menu ml-auto">
+          <nav class="">
+            <div class="" id="navbarSupportedContent">
               <!-- Menu  -->
-              <ul class="navbar-nav ml-auto">
+              <ul class="nav-menu ml-auto">
                 <!-- Menu Items  -->
-                <li class="nav-item sub-menu-parent" *ngFor="let nav of navigation">
-                  <a class="nav-link" routerLink={{nav.link}} routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">{{nav.title}}</a>
+                <li class=" sub-menu-parent" *ngFor="let nav of navigation">
+                  <a class="" routerLink={{nav.link}} routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">{{nav.title}}</a>
                   <!-- Sub Menu -->
                   <ul class="sub-menu" *ngIf="nav.children">
                     <li *ngFor="let child of nav.children" [ngClass]="{'sub-menu-child': child.children}">
@@ -33,7 +29,7 @@
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item">
+                <li class="">
                   <div class="search-area" [ngClass]="{'li-hidden':!isOpen, 'li-open':isOpen}">
                     <button #searchButton type="button" class="nav-link" (click)="toggle()">
                       <img src="assets/images/search-icon.png">
@@ -41,10 +37,10 @@
                     <dsod-search [isOpen]=isOpen></dsod-search>
                   </div>
                 </li>
-                <li class="nav-item login-wrap" *ngIf="(isLoggedIn$ | async)" ngbDropdown placement="bottom-right">
+                <li class=" login-wrap" *ngIf="(isLoggedIn$ | async)" ngbDropdown placement="bottom-right">
                   <div class="nav-link avatar-wrap">
                     <img class="avatar" [src]="userProfile?.photo_url ? (avatarBaseUrl + userProfile.photo_url) : './assets/images/no-avatar.png'">
-                    <li class="nav-item sub-menu-parent" ngbDropdownToggle>
+                    <li class=" sub-menu-parent" ngbDropdownToggle>
                       <a class="nav-link profile-name">{{userProfile?.full_name}}</a>
                       <ul class="sub-menu">
                         <li>
@@ -56,13 +52,13 @@
                     </li>
                   </div>
                 </li>
-                <li class="nav-item login-wrap" *ngIf="(isLoggedIn$ | async)">
+                <li class=" login-wrap" *ngIf="(isLoggedIn$ | async)">
                   <div class="nav-link avatar-wrap notify-wrapper">
                     <i class="fa fa-bell icon-bell"></i>
                     <span class="alert-count">5</span>
                   </div>
                 </li>
-                <li class="nav-item login-wrap" *ngIf="!(isLoggedIn$ | async)">
+                <li class=" login-wrap" *ngIf="!(isLoggedIn$ | async)">
                   <a [routerLink]="['login']" class="nav-link">Login</a>
                 </li>
               </ul>
