--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -21,16 +21,17 @@
   width: 100%;
   min-height: 96px;
   transition: 0.3s ease all;
-  nav.navbar {
+  nav {
     padding: 0.5rem 0;
-    ul.navbar-nav {
+    ul.nav-menu {
       margin: 10px 0px;
-      li.nav-item {
+      display: flex;
+      >li {
         border-right: 1px solid $color-white;
         align-items: center;
         display: flex;
         position: relative;
-        a.nav-link {
+        >a {
           color: $color-white !important;
           border-bottom: 1px solid transparent;
           padding: 0;
@@ -39,6 +40,7 @@
           display: block;
           white-space: nowrap;
           overflow: hidden;
+          text-decoration: none;
           &:hover {
             border-bottom: 1px solid $color-white;
           }
@@ -51,7 +53,7 @@
           border-right: none;
         }
         &.login-wrap {
-          a.nav-link {
+          >a {
             background: $black;
             padding: 7px 10px;
             line-height: 27px;
@@ -173,10 +175,10 @@
 
 @media only screen and (max-width:1800px) {
   .nav-wrapper {
-    nav.navbar {
-      ul.navbar-nav {
-        li.nav-item {
-          a.nav-link {
+    nav {
+      ul.nav-menu {
+        >li {
+          >a {
             margin: 0 13px;
             font-size: 19px;
           }
