--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -1,7 +1,7 @@
 <div class="page-content">
   <div class="container" *ngIf="(pageContent$ | async)">
     <div class="row">
-      <div class="col-xl-9">
+      <div class="col-9">
         <div class="article-content">
           <dsod-article-media [content]="pageContent$ | async"></dsod-article-media>
           <dsod-article-content [content]="(pageContent$ | async)?.content"></dsod-article-content>
@@ -10,7 +10,7 @@
         <div class="related-content" *ngIf="(pageContent$ | async)?.relativeTopicList.length">
           <h2 class="section-title">Related Content</h2>
           <div class="row">
-            <div class="col-lg-4" *ngFor="let topic of (pageContent$ | async)?.relativeTopicList">
+            <div class="col-4" *ngFor="let topic of (pageContent$ | async)?.relativeTopicList">
               <dsod-related-content [content]="topic" [contentTypeName]="(pageContent$ | async)?.contentTypeName"></dsod-related-content>
             </div>
           </div>
@@ -19,7 +19,7 @@
           <dsod-article-reviews [content]="pageContent$ | async"></dsod-article-reviews>
         </div>
       </div>
-      <div class="col-xl-3">
+      <div class="col-3">
         <section class="trending-videos" *ngIf="(trendingTopics$ | async).length">
           <h2 class="section-title">Trending Topics</h2>
           <div *ngFor="let topic of trendingTopics$ | async">
