--- a/src/app/pages/dso-practice/components/dso-practice-tabs/dso-practice-tab.component.html
+++ b/src/app/pages/dso-practice/components/dso-practice-tabs/dso-practice-tab.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-lg-6" *ngFor="let post of DSOPracicesPost$ | async">
+    <div class="col-6" *ngFor="let post of DSOPracicesPost$ | async">
       <dsod-topic [topic]="post" [showImage]="true" [contentLength]=300 [showHeader]="true" styleFor="content-lg" [showRating]=false></dsod-topic>
   </div>
 </div>
