--- a/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.html
+++ b/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.html
@@ -1,7 +1,7 @@
 <div class="practice-sponsors">
   <div class="container-fluid">
     <div class="row mb-5" *ngFor="let topic of (sponsoredTopics$ | async)">
-      <div class="col-md-6">
+      <div class="col-6">
         <div class="sponsor-desc">
           <div class="sponsor-header mb-3">
             <h3 *ngIf="topic.sponsorName==='NBL'" class=" bg-red">Sponsored events from Nobel Biocare</h3>
@@ -21,7 +21,7 @@
                 aria-hidden="true"></i></span></a>
         </div>
       </div>
-      <div class="col-md-6 thumbnail">
+      <div class="col-6 thumbnail">
         <img *ngIf="topic.featuredMedia" class="img-fluid" src="{{topic.featuredMedia.code.originalUrl}}" alt="">
       </div>
     </div>
