--- a/src/app/pages/events/components/create-event/create-event.component.html
+++ b/src/app/pages/events/components/create-event/create-event.component.html
@@ -16,14 +16,14 @@
   <div class="create-event-form">
     <form action="">
       <div class="row">
-        <div class="col-md-9">
+        <div class="col-9">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">Event Title <span class="text-danger">*</span>
             </label>
             <input type="text" class="form-control" id="" placeholder="Give it a short distinct name">
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-3">
           <div class="form-group">
             <label for="" class="form-control-label">Theme</label>
             <select name="" id="" class="form-control">
@@ -37,7 +37,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-9">
+        <div class="col-9">
           <div class="form-group">
             <label for="" class="form-control-label">Presenter</label>
             <input type="text" class="form-control" id="" placeholder="Specify where it's held">
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-12">
           <div class="form-group">
             <label for="" class="form-control-label">Description</label>
             <textarea name="" id="" class="form-control" rows="4"></textarea>
@@ -64,39 +64,39 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-4">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">Starts</label>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-6">
                 <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="date">
               </div>
-              <div class="col-md-6">
+              <div class="col-6">
                 <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="year">
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-4">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">Ends</label>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-6">
                 <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="date">
               </div>
-              <div class="col-md-6">
+              <div class="col-6">
                 <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="year">
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-2">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">Start Time</label>
             <input type="time" class="form-control">
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-2">
           <div class="form-group">
             <label for="" class="form-control-label text-uppercase">End Time</label>
             <input type="time" class="form-control">
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-12">
           <div class="action-wrap pt-1 pb-1">
             <a href="">
               <i class="fa fa-search" aria-hidden="true"></i>Schedule Multiple Events
