--- a/src/app/pages/events/containers/events-page.component.html
+++ b/src/app/pages/events/containers/events-page.component.html
@@ -12,7 +12,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-3">
       <section class="filter-events">
         <dosd-filter-select label="Filter events by"></dosd-filter-select>
         <div><label><i class="fa fa-plus mr-2"></i>Create Event</label></div>
@@ -23,7 +23,7 @@
         <dsod-event-training></dsod-event-training>
       </section>
     </div>
-    <div class="col-md-9">
+    <div class="col-9">
       <h2 class="section-title mt-5 d-flex justify-content-between">{{(isEditingEnable?'Edit Event':'Events')}}
         <div class="d-flex" *ngIf="(isLoggedIn$ | async)">
           <button *ngIf="!isEditingEnable" class="btn btn-primary btn-blue event-action-btn mr-2" (click)="onEditEvent($event)">Edit</button>
@@ -33,7 +33,7 @@
       </h2>
 
       <div class="row">
-        <div class="col-md-4" *ngFor="let event of events">
+        <div class="col-4" *ngFor="let event of events">
           <dsod-event-card [isEditable]="isEditingEnable" [event]="event" [isdeleteable]="isdeletionEnable"
             (deleteEvent)="deleteEvent($event)"></dsod-event-card>
         </div>
