--- a/src/app/pages/podcast/containers/podcast-page.component.html
+++ b/src/app/pages/podcast/containers/podcast-page.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-xl-12" *ngIf="content">
+    <div class="col-12" *ngIf="content">
       <div class="podcast-intro p-t-115">
         <dsod-podcast-header [content]="pageContent$ | async"></dsod-podcast-header>
         <div class="podcast-player" *ngIf="content">
           <div class="row">
-            <div class="col-lg-2">
+            <div class="col-2">
               <dsod-content-author [podcast]="content"></dsod-content-author>
             </div>
-            <div class="col-lg-10">
+            <div class="col-10">
               <dsod-audio-player [content]="pageContent$ | async"></dsod-audio-player>
             </div>
           </div>
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xl-12 col-lg-12">
+    <div class="col-12">
       <dsod-podcast-content [content]="content"></dsod-podcast-content>
       <dsod-references [references]="(pageContent$ | async)?.references"></dsod-references>
       <div *ngIf="isLoggedIn">
