--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-12">
       <div class="mt-5">
         <h2>{{ content.title }}</h2>
         <span class="by" *ngIf="content && content.author">by {{ content.author.fullName }}</span>
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-12">
       <div class="md-5 mt-5">
         <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
           <img [src]=getUrl(content.featuredMedia.code.thumbnail) class="img-fluid" alt="">
@@ -17,35 +17,35 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-12">
       <dsod-audio-player [content]="content"></dsod-audio-player>
       <div class="speakers-content mt-5" [innerHTML]="contentString"></div>
     </div>
   </div>
   <dsod-references [references]="content.references"></dsod-references>
   <div class="row" *ngFor="let essay of content.visualEssays">
-    <div class="col-lg-12" *ngIf="essay.visualEssayImages">
+    <div class="col-12" *ngIf="essay.visualEssayImages">
       <dsod-essay-images-carousel [visualEssayImages]="essay.visualEssayImages"></dsod-essay-images-carousel>
     </div>
-    <div class="col-lg-12">
+    <div class="col-12">
       <div class="article-content">
         <p>{{essay.description}}</p>
       </div>
     </div>
-    <div class="col-lg-12">
+    <div class="col-12">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-8">
           <dsod-essay-author [essay]="essay"></dsod-essay-author>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-12">
       <dsod-gallery [photosUrls]="content.photoUrls"></dsod-gallery>
     <h2 class="section-title" *ngIf="content.relativeTopicList">Related Content</h2>
       <div class="row">
-        <div class="col-lg-4" *ngFor="let topic of content.relativeTopicList">
+        <div class="col-4" *ngFor="let topic of content.relativeTopicList">
           <dsod-related-content [content]="topic" [contentTypeName]="content.contentTypeName"></dsod-related-content>
         </div>
       </div>
