--- a/src/app/shared/components/references/reference.component.html
+++ b/src/app/shared/components/references/reference.component.html
@@ -1,5 +1,5 @@
 <div class="row" *ngIf="references">
-  <div class="col-lg-12">
+  <div class="col-12">
     <h2 *ngIf="references.length">References</h2>
     <ul>
       <li *ngFor="let ref of references">{{ref}}</li>
