--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,19 +32,24 @@ h2 {
 
 body {
   font-size: 13px;
-  overflow-x: hidden;
+  overflow-x: auto;
   position: relative;
 }
 
 a {
   text-decoration: none !important;
 }
+.site-wrap{
+  min-width: 1900px;
+}
 
 .container {
   // max-width: 1710px;
   margin: 0 auto;
-  width: 100%;
+  width: 100% !important;
   padding: 0 15px;
+  min-width: 1710px !important;
+
 }
 
 h2.section-title {
