--- a/src/app/pages/home/components/podcast-items/podcast-items.component.scss
+++ b/src/app/pages/home/components/podcast-items/podcast-items.component.scss
@@ -37,6 +37,7 @@ ul {
 @media only screen and (max-width:1440px) {
   ul {
     li {
+      padding: 13px 25px;
       font-size: 18px;
 
       span {
