--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,10 +15,10 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-4">
+      <div class="col-xl-5 col-5">
         <dsod-events></dsod-events>
       </div>
-      <div class="col-8">
+      <div class="col-xl-7 col-7">
         <dsod-our-sponsors [sponsoredTopics]="sponsoredTopics$ | async"></dsod-our-sponsors>
       </div>
     </div>
