--- a/src/app/pages/home/components/featured-topics/featured-topics.component.scss
+++ b/src/app/pages/home/components/featured-topics/featured-topics.component.scss
@@ -1,7 +1,6 @@
 @import 'variables.scss';
+
 // Featured Topics Section
-
-
 .feautred-topics {
   font-family: $Arial;
 
@@ -16,11 +15,13 @@
   .no-thumbnail {
     /deep/ .topic-title-large.topic-title-small {
       border: none !important;
+      padding-top: 0 !important;
+      max-height: 50px !important;
     }
   }
 }
 
-@media only screen and (max-width:1600px){
+@media only screen and (max-width:1600px) {
   .feautred-wrap {
     margin-bottom: 30px;
     padding-bottom: 15px;
