--- a/src/app/pages/home/components/latest-item/latest-item.component.scss
+++ b/src/app/pages/home/components/latest-item/latest-item.component.scss
@@ -47,6 +47,7 @@
         max-width: 42px;
       }
     }
+
   }
 
   .latest-block-content {
@@ -99,6 +100,24 @@
   .latest-block-thumbnail {
     border: none;
   }
+
+  /deep/ dsod-topic {
+    .block-wrap {
+      padding-bottom: 15px;
+    }
+
+    .topic-block-lg {
+      em {
+        margin-bottom: 4px !important;
+      }
+    }
+
+    .topic-block {
+      .topic-block-content {
+        padding-bottom: 0 !important;
+      }
+    }
+  }
 }
 
 .latest-block-sm {
@@ -115,6 +134,29 @@
       .latest-block-header {
         h4 {
           font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1440px) {
+  .latest-layout-row {
+    /deep/ .excrept-content-lg {
+      padding-top: 5px;
+      font-size: 16px;
+      display: block;
+      line-height: 23px;
+      max-height: 120px;
+      overflow: hidden;
+      margin-bottom: 8px;
+    }
+
+    /deep/ .topic-block {
+      .topic-block-content {
+        .topic-title-large {
+          font-size: 20px !important;
+          padding-bottom: 5px !important;
         }
       }
     }
