--- a/src/app/shared/components/rating/rating.component.scss
+++ b/src/app/shared/components/rating/rating.component.scss
@@ -31,3 +31,19 @@
     }
   }
 }
+
+@media only screen and (max-width:1440px) {
+  :host {
+    .topic-rating {
+      min-width: 97px;
+      margin-left: 2px;
+
+      span {
+        height: 17px;
+        width: 17px;
+        line-height: 17px;
+        font-size: 13px;
+      }
+    }
+  }
+}
