--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -18,7 +18,7 @@
 
       h4 {
         color: $color-primary;
-        font-size: 18px;
+        font-size: 16px;
         margin: 0;
         line-height: 20px;
       }
@@ -27,7 +27,7 @@
     .topic-block-thumbnail {
       position: relative;
       border-top: 3px solid $mine_grey;
-      padding-top: 60%;
+      padding-top: 57%;
       width: 100%;
 
       a {
@@ -65,7 +65,7 @@
 
       .topic-title-large {
         font-weight: 500;
-        font-size: 27px;
+        font-size: 21px;
         color: #000000;
         padding-bottom: 10px;
         cursor: pointer;
@@ -76,25 +76,26 @@
       }
 
       .topic-title-small {
-        font-size: 20px;
+        font-size: 17px;
         border-top: 1px solid #c0cad1;
-        padding-top: 15px;
-        line-height: 30px;
-        padding-bottom: 10px;
-        max-height: 80px;
+        padding-top: 9px;
+        line-height: 24px;
+        padding-bottom: 0px;
+        max-height: 60px;
         overflow: hidden;
       }
 
       em {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 600;
-         display: block;
+        display: block;
+        margin-bottom: 5px;
 
         a.read-about {
           margin-left: 10px;
 
           img {
-            max-width: 42px;
+            max-width: 32px;
           }
         }
       }
@@ -124,6 +125,10 @@
         }
       }
     }
+
+    /deep/ em {
+      margin-bottom: 10px !important;
+    }
   }
 
   .bg-none {
@@ -141,7 +146,7 @@
       }
 
       a.read-about {
-        bottom: 40px;
+        bottom: 25px;
         cursor: pointer;
       }
     }
@@ -167,8 +172,7 @@
         -webkit-box-orient: vertical;
         padding-top: 5px;
         font-size: 17px;
-        max-height: 200px;
-        overflow: hidden;
+
       }
     }
   }
@@ -194,7 +198,7 @@
   .topic-block {
     .topic-block-header {
       h4 {
-        font-size: 16px;
+        font-size: 14px;
       }
     }
 
@@ -205,7 +209,9 @@
 
       em {
         font-size: 18px;
-       
+
+
+
       }
     }
   }
@@ -216,10 +222,10 @@
 
     .topic-block {
       .topic-block-header {
-        padding: 16px 10px 14px;
+        padding: 12px 10px 10px;
 
         h4 {
-          font-size: 16px;
+          font-size: 14px;
         }
       }
 
@@ -229,26 +235,18 @@
         }
 
         .topic-title-small {
-          font-size: 17px;
+          font-size: 15px;
         }
 
         em {
-          font-size: 16px;
+          font-size: 14px;
+
+          a.read-about {
+            img {
+              max-width: 32px;
+            }
+          }
         }
-
-
-        // .excrept-content-lg {
-        //   font-size: 17px;
-        //   max-height: 148px;
-        //   overflow: hidden;
-
-        //   /deep/ p {
-        //     font-size: 17px;
-        //     max-height: 125px;
-        //     overflow: hidden;
-        //     margin: 0;
-        //   }
-        // }
       }
     }
   }
