--- a/src/app/shared/components/trending/trending.component.scss
+++ b/src/app/shared/components/trending/trending.component.scss
@@ -64,3 +64,13 @@
     }
   }
 }
+
+@media only screen and (max-width:1440px) {
+  .trending-block {
+    .trending-block-caption {
+      h4 {
+        font-size: 16px;
+      }
+    }
+  }
+}
