--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -2,6 +2,7 @@
 
 .profile-container {
   color: $color-white;
+
   .profile-header {
     background-color: $cod_gray;
     text-align: center;
@@ -9,6 +10,7 @@
     border-top-left-radius: 10px;
     font-size: 25px;
     position: relative;
+
     .action-container {
       display: flex;
       align-items: flex-start;
@@ -18,68 +20,84 @@
       padding: 10px;
       font-size: 16px;
       cursor: pointer;
+
       .action-name {
         padding: 0 10px;
         line-height: 1.14;
+
         &:hover {
           text-decoration: underline;
         }
       }
     }
   }
+
   .profile-body {
     &::-webkit-scrollbar {
       width: 6px;
     }
+
     height: calc(100% - 67px);
     overflow-y: auto;
+
     .section-container {
       padding: 15px 30px;
       border-bottom: 1px solid $gray;
       line-height: 1.2;
+
       &:last-child {
         border-bottom: none;
         padding-bottom: 30px;
       }
+
       .userInfo-container {
         display: flex;
         align-items: center;
+
         .avatar {
           width: 80px;
           height: 80px;
           border-radius: 50%;
         }
+
         .userInfo-wrapper {
           display: flex;
           flex-direction: column;
           padding: 0 20px;
+
           .userName {
             font-size: 18px;
             padding-bottom: 10px;
           }
+
           .job {
             font-size: 15px;
           }
         }
       }
+
       .profile-image-container {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         margin-bottom: 30px;
+
         .profile-title {
           font-size: 20px;
           padding-bottom: 10px;
         }
+
         .avatar-container {
           position: relative;
+
           .avatar {
             width: 115px;
             height: 115px;
             border-radius: 50%;
             background-color: $dove-gray;
           }
+
           .edit-icon {
             position: absolute;
             bottom: 0;
@@ -93,26 +111,30 @@
             align-items: center;
             justify-content: center;
             font-size: 20px;
-            box-shadow: 0 2px 4px rgba(0,0,0,.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
           }
         }
       }
+
       .info-container {
         .title {
           margin-bottom: 10px;
           font-size: 20px;
         }
+
         .body-wrapper {
           .body-item-wrapper {
             position: relative;
             display: flex;
             align-items: center;
             min-height: 60px;
+
             &:last-child {
               .item-content {
                 border-bottom: none;
               }
             }
+
             .icon-body-item {
               display: flex;
               align-items: center;
@@ -120,28 +142,34 @@
               width: 40px;
               height: 40px;
               flex: 0 0 40px;
+
               &.gray-background {
                 background-color: $bali-hai;
               }
             }
+
             .item-content {
               display: flex;
               flex-direction: column;
               flex: 1 1 auto;
               margin-left: 20px;
               font-size: 15px;
+
               .title {
                 margin-bottom: 0;
                 font-size: 15px;
               }
+
               .content {
                 color: $gray;
               }
             }
           }
+
           .add-new-item-container {
             .new-item-container {
               padding-bottom: 10px;
+
               .title {
                 font-size: 16px;
               }
@@ -149,6 +177,7 @@
           }
         }
       }
+
       .upload-hidden {
         position: absolute;
         top: 0;
@@ -159,6 +188,56 @@
         cursor: pointer;
         width: 100%;
       }
+    }
+  }
+}
+
+@media only screen and (max-width:1440px) {
+  .profile-panel-container {
+    .profile-container {
+      top: 80px !important;
+      bottom: 0 !important;
+      min-height: auto !important;
+    }
+
+    .profile-view-container {
+      height: 100% !important;
+    }
+  }
+
+
+  .profile-container {
+    .profile-header {
+      font-size: 19px;
+
+      .action-container {
+        top: 12px;
+      }
+    }
+
+    .profile-body {
+      .section-container {
+        .info-container {
+          .title {
+            margin-bottom: 0px;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-height:850px) {
+  .profile-panel-container {
+    .profile-container {
+      top: 80px !important;
+      bottom: 0 !important;
+      min-height: auto !important;
+    }
+
+    .profile-view-container {
+      height: 100% !important;
     }
   }
 }
