--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <div class="profile-out-click-container" [ngClass]="{'hide': !(isOpenedProfilePanel$ | async)}" (click)="onClickedOutProfilePanel()"></div>
 <div class="nav-wrapper" onScroll-update>
   <div class="container-fluid">
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between align-items-center">
       <div class="brand">
         <a [routerLink]="['/']"><img class="img img-fluid" src="assets/images/dso-logo.png"></a>
       </div>
-      <div class="col-sm-10">
-        <div class="nav-menu">
+      <div class="col-sm-10 d-flex">
+        <div class="nav-menu ml-auto">
           <nav class="navbar navbar-expand-lg navbar-light">
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
