--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -192,6 +192,7 @@
     text-align: left;
     // padding-right: 15px;
     padding-top: 10px;
+    min-width: 150px;
 
     img {
       max-width: 100%;
@@ -238,6 +239,53 @@
             margin: 0 10px;
             font-size: 16px;
           }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1366px) {
+  .nav-wrapper {
+    nav.navbar {
+      ul.navbar-nav {
+        align-items: center;
+
+        li.nav-item {
+          a.nav-link {
+            margin: 0 7px;
+            font-size: 14px;
+          }
+
+          &.login-wrap {
+            a.nav-link {
+              font-size: 14px;
+            }
+          }
+        }
+
+        li.nav-item.sub-menu-parent {
+          li {
+            a {
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1360px) {
+  .nav-wrapper {
+    nav.navbar {
+      ul.navbar-nav {
+        .li-open {
+          width: 160px;
+        }
+
+        .search-area {
+          margin: 0 10px !important;
         }
       }
     }
