--- a/src/app/pages/community/components/unite-viewer/unite-viewer-modal.component.scss
+++ b/src/app/pages/community/components/unite-viewer/unite-viewer-modal.component.scss
@@ -1,19 +1,19 @@
  @import 'variables';
 
-:host{
-  .modal-body{
-    h2 {
-      font-family: $neue_hgd_Thin;
-      font-size: 50px;
-      line-height: 60px;
-    }
+ :host {
+   .modal-body {
+     h2 {
+       font-family: $neue_hgd_Thin;
+       font-size: 50px;
+       line-height: 60px;
+     }
 
-    span.by {
-      font-size: 25px;
-      line-height: 45px;
-    }
-  }
-  
+     span.by {
+       font-size: 25px;
+       line-height: 45px;
+     }
+   }
+
 
    .article-content {
      /deep/ div {
@@ -23,44 +23,17 @@
        div {
          padding-top: 0 !important;
        }
-
-       span {
-         position: relative !important;
-         top: auto !important;
-         right: auto !important;
-         bottom: auto !important;
-         left: auto !important;
-         width: auto !important;
-         height: auto !important;
-       }
      }
 
-     /deep/ iframe {
-       height: 70vh !important;
-       position: relative !important;
-     }
+
 
      /deep/ p {
-       font-size: 20px;
-
-       &:nth-child(1) {
-         display: block;
-         font-size: 20px;
-         line-height: 35px;
-         margin-bottom: 25px;
-       }
-
-       &:nth-child(3) {
-         color: $text-main;
-         font-size: 20px;
-         line-height: 35px;
-         margin-bottom: 25px;
-       }
+       font-size: 18px;
 
        a {
          color: #0066cc;
          line-height: 35px;
-         font-size: 22px;
+         font-size: 18px;
        }
 
        &:last-child {
@@ -70,13 +43,16 @@
      }
 
      /deep/ pre {
+       font-size: 16px;
+       white-space: normal;
+
        em {
          font-size: 20px;
        }
      }
 
      /deep/ h2 {
-       font-size: 30px;
+       font-size: 25px;
        color: $color-primary;
 
        b,
@@ -96,10 +72,10 @@
        li {
          position: relative;
          color: $text-main;
-         font-size: 22px;
+         font-size: 18px;
          line-height: 35px;
          padding: 0 50px 0 0;
-         margin-bottom: 25px;
+         margin-bottom: 10px;
          list-style: disc;
 
          &::before {
@@ -128,10 +104,10 @@
        li {
          position: relative;
          color: $text-main;
-         font-size: 22px;
+         font-size: 18px;
          line-height: 35px;
          padding: 0 50px 0 0;
-         margin-bottom: 25px;
+         margin-bottom: 10px;
          list-style: disc;
 
          &::before {
@@ -153,6 +129,59 @@
        }
      }
    }
-}
+ }
 
 
+ @media only screen and (max-width:1440px) {
+   :host {
+     .modal-title{
+       font-size: 20px;
+     }
+     .modal-body {
+       h2 {
+         font-size: 35px;
+         line-height: 50px;
+       }
+
+       span.by {
+         font-size: 22px;
+       }
+     }
+
+
+     .article-content {
+
+       /deep/ p {
+         font-size: 16px;
+
+         a {
+           font-size: 16px;
+         }
+       }
+
+       /deep/ pre {
+         font-size: 16px;
+
+         em {
+           font-size: 16px;
+         }
+       }
+
+       /deep/ h2 {
+         font-size: 22px;
+       }
+
+       /deep/ ul {
+         li {
+           font-size: 16px;
+         }
+       }
+
+       /deep/ ol {
+         li {
+           font-size: 16px;
+         }
+       }
+     }
+   }
+ }
